zeit.cms changes
================

1.1.5 (unreleased)
------------------

1.1.4 (2008-08-06)
------------------

- WYSIWYG-Editor: Bilder, die nicht direkt unterhalb des <p> sind werden
  richtig in HTML konvertiert.

1.1.3 (2008-08-06)
------------------

- Korrektes Übersetzen des View-Titels.

1.1.2 (2008-08-04)
------------------

- Import der Vortagszugriffszahlen in mehreren Transaktionen.

1.1.1 (2008-08-01)
------------------

- Import der Vortagszugriffszahlen jetzt mit explizitem Locking. Zudem besseres
  Verhalten bei ungültigen Pfaden.

1.1 (2008-08-01)
----------------

- WYSIWYG-Editor kommt besser mit beliebigen ``article_extra``-Tags klar (bug
  #4442).
- Importieren und Speichern der Vortagszugriffszahlen.

1.0 (2008-07-29)
----------------

- Checkout/checkin während des Veröffentlichungsvorgangs funktioniert wieder
  immer (AttributeError: 'BaseResponse' object has no attribute 'getCookie')
- Sicherstellen, dass das automatische Related-Update aequivalente XMLs auch
  als gleich ansieht (sonst gibt es einen Recursion-Error beim Checkin).
- Ordner löschen dürfen nur noch Benutzer mit der Rolle "Producer".
- Templates können jetzt mit der Rolle "Producer" bearbeitet werden.
- Es kommen keine Daten mehr aus anderen Threads in den eigenen (via
  gocept.form>=0.7.5).
- Listing von Links robuster.
- Die Panels Clipboard und Bearbeitete Dokumente haben die Plaetze getauscht.
- WYSIWYG-Editor bei der Infobox (bug #4364).
- <a href> und <br/> in der BU (bug #4366).
- Sinnvolles Metadata-Preview bei Bildergallerien.
- Neuer Inhaltstyp: Datei
- Verbesserter Parser für das ISO8601-Datumsformat.
- Links fügen beim Syndizieren ihr Ziel in den Channel ein (als Attribut
  ``{http://namespaces.zeit.de/CMS/link}href``), bug #4407.
- "Kommentare erlaubt" jetzt bei den Standardmetadaten (bug #4385).
- Bei der Center-Page ist Ausgabe und Jahr kein Pflichtfeld mehr (bug #4408).
- Copyright-Default jetzt "ZEIT ONLINE" (bug #4409).