@@ -73,6 +73,35 @@ Create a channel and insert the link[#functional]_:
 </channel>
 
 
+Related content
+===============
+
+If a link is referenced as related content by another content object, the XML
+representation of that object's related content includes the target URL:
+
+>>> import zeit.cms.testcontenttype.testcontenttype
+>>> content = zeit.cms.testcontenttype.testcontenttype.TestContentType()
+
+>>> import zeit.cms.related.interfaces
+>>> related = zeit.cms.related.interfaces.IRelatedContent(content)
+
+>>> related.related = (link,)
+>>> import lxml.etree
+>>> print lxml.etree.tostring(related.xml, pretty_print=True)
+<references xmlns:py="http://codespeak.net/lxml/objectify/pytype">
+  <reference xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+             xmlns:ns0="http://namespaces.zeit.de/CMS/link"
+             type="intern" href="http://xml.zeit.de/link"
+             ns0:href="http://gocept.com">
+    ...
+  </reference>
+</references>
+
+
+Cleanup
+=======
+
 >>> zope.app.component.hooks.setSite(old_site)
 
 .. [#functional] 
